--- a/index.html
+++ b/index.html
@@ -251,35 +251,35 @@ button.cta {
 					<div class="downloads">
 					<a href="/#/2/1"><img class="downloads" data-src="/lib/img/java-2.png" alt="Universal"></a>
 					<a href="/#/2/2"><img class="downloads" data-src="/lib/img/windows-2.png" alt="Windows"></a>
-					<a href="/#/2/3"><img class="downloads" data-src="/lib/img/apple-2.png" alt="Apple"></a>
-					<a href="/#/2/4"><img class="downloads" data-src="/lib/img/linux-2.png" alt="Linux"></a>
+					<!-- <a href="/#/2/3"><img class="downloads" data-src="/lib/img/apple-2.png" alt="Apple"></a>
+					<a href="/#/2/4"><img class="downloads" data-src="/lib/img/linux-2.png" alt="Linux"></a> -->
 					</div>
 				</section>
 				<section data-background="#413dbd">
 					<h2>Universal Wallet</h2>
 					<div class="downloads-expanded">
-					<a href=""><img class="downloads-expanded" data-src="/lib/img/java-2.png" alt="Universal"></a>
+					<a href="https://github.com/Qoracoin/Qora/releases/download/0.22.0/Qora_v0.22.0.zip"><img class="downloads-expanded" data-src="/lib/img/java-2.png" alt="Universal"></a>
 					<p>The Universal Wallet</p>
 				</div><a class="downloads" href="/#/2"><i class="fa fa-chevron-left"> Back to downloads</i></a>
 				</section>
 				<section data-background="#413dbd">
 					<h2>Windows Wallet</h2>
 					<div class="downloads-expanded">
-						<a href=""><img class="downloads-expanded" data-src="/lib/img/windows-2.png" alt="Windows"></a>
+						<a href="https://github.com/Qoracoin/Qora/releases/download/0.22.0/Qora-v0.22.0.exe"><img class="downloads-expanded" data-src="/lib/img/windows-2.png" alt="Windows"></a>
 					</div><a class="downloads" href="/#/2"><i class="fa fa-chevron-left"> Back to downloads</i></a>
 				</section>
-				<section data-background="#413dbd">
+				<!-- <section data-background="#413dbd">
 					<h2>MAC OS Wallet</h2>
 					<div class="downloads-expanded">
 						<a href=""><img class="downloads-expanded" data-src="/lib/img/apple-2.png" alt="MAC OS"></a>
 					</div><a class="downloads" href="/#/2"><i class="fa fa-chevron-left"> Back to downloads</i></a>
-				</section>
-				<section data-background="#413dbd">
+				</section> -->
+				<!-- <section data-background="#413dbd">
 					<h2>Linux Wallet</h2>
 					<div class="downloads-expanded">
 						<a href=""><img class="downloads-expanded" data-src="/lib/img/linux-2.png" alt="Windows"></a>
 					</div><a class="downloads" href="/#/2"><i class="fa fa-chevron-left"> Back to downloads</i></a>
-				</section>
+				</section> -->
 				</section>
 
 				<section>
