--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@ img.resources-expanded {
     width: 400px;
     padding: 50px;
 }
+img.exchanges {
+    width: 250px;
+    padding: 50px;
+}
+img.exchanges-expanded {
+    width: 400px;
+    padding: 50px;
+}
 a.resources {
     color: #444 !important;
     text-decoration: none;
@@ -214,7 +222,7 @@ button.cta {
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/#/1">About</a></li>
+				<li><a href="/#/1/1">About</a></li>
 				<li><a href="/#/2">Downloads</a></li>
 				<li><a href="/#/3">Resources</a></li>
 				<li><a href="/#/4">Community</a></li>
@@ -341,9 +349,9 @@ button.cta {
 			<section data-background="#ffffff">
 				<h2>Exchanges</h2>
 				<div class="resources">
-					<a href="/#/3/1"><img class="resources" data-src="/lib/img/github.png" alt="GitHub"><img></a>
-					<a href="/#/3/2"><img class="resources" data-src="/lib/img/blockexplorer.png" alt="Block Explorer"></a>
-					<a href="/#/3/3"><img class="resources" data-src="/lib/img/api.png" alt="API"></a><br>
+					<a target="_blank" href="https://www.ccedk.com/qora-btc"><img class="exchanges" data-src="/lib/img/ccedk-logo.png" alt="CCEDK"><img></a>
+					<a target="_blank" href="https://poloniex.com/exchange#btc_qora"><img class="exchanges" data-src="/lib/img/poloniex-logo.png" alt="Poloniex"></a>
+					<a target="_blank" href="https://bter.com/trade/QORA_BTC"><img class="exchanges" data-src="/lib/img/bter-logo.png" alt="BTER"></a><br>
 				</div>
 			</section>
 			<!-- Docs -->
