--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@ a:focus.reco, a:hover.reco {
 		border: 1px solid;
 		padding: 20px;
 }
+a.rech {
+    color: #ccc !important;
+    text-decoration: none;
+		font-size: 20px;
+		border: 3px solid;
+		padding: 20px;
+}
+a:focus.rech, a:hover.rech {
+    color: #444 !important;
+		text-decoration: none;
+		font-size: 20px;
+		border: 3px solid;
+		padding: 20px;
+}
 img.resources {
     width: 200px;
     padding: 50px;
@@ -241,7 +255,11 @@ button.cta {
 
 
 					<section data-transition="slide" data-background="#ffffff" data-background-transition="zoom">
-							<img data-src="/lib/img/qora.png" alt="Qora">
+							<img data-src="/lib/img/qora.png" alt="Qora"><br><br>
+							<a class="rech" href="/#/1/1"><i class="fa fa-play"> Watch the video</i></a>
+							<a class="rech" href="/#/2"><i class="fa fa-download"> Download the wallet</i></a>
+							<a class="rech" href="/#/3"><i class="fa fa-th-list"> Find Resources</i></a>
+							<a class="rech" href="/#/4"><i class="fa fa-users"> Meet the community</i></a>
 					</section>
 					<section>
 					<section data-background="https://i.imgur.com/b1BZy3A.jpg">
@@ -389,7 +407,8 @@ button.cta {
 						<a href="/#/4/3"><img class="resources" data-src="/lib/img/facebook.png" alt="Facebook"></a><br>
 						<a href="/#/4/4"><img class="resources" data-src="/lib/img/medium.png" alt="Medium"></a>
 						<a href="/#/4/5"><img class="resources" data-src="/lib/img/youtube.png" alt="YouTube"></a>
-						<a href="/#/4/6"><img class="resources" data-src="/lib/img/reddit.png" alt="Reddit"></a>
+						<a href="/#/4/6"><img class="resources" data-src="/lib/img/reddit.png" alt="Reddit"></a><br>
+						
 					</div>
 				</section>
 				<!-- Slack -->
