--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ button.cta {
 							<img data-src="/lib/img/qora.png" alt="Qora"><br><br>
 							<a class="rech" href="/#/1/1"><i class="fa fa-play"> Watch the video</i></a>
 							<a class="rech" href="/#/2"><i class="fa fa-download"> Download the wallet</i></a>
-							<a class="rech" href="/#/3"><i class="fa fa-th-list"> Find Resources</i></a>
+							<a class="rech" href="/#/3"><i class="fa fa-th-list"> Find resources</i></a>
 							<a class="rech" href="/#/4"><i class="fa fa-users"> Meet the community</i></a>
 					</section>
 					<section>
@@ -408,7 +408,7 @@ button.cta {
 						<a href="/#/4/4"><img class="resources" data-src="/lib/img/medium.png" alt="Medium"></a>
 						<a href="/#/4/5"><img class="resources" data-src="/lib/img/youtube.png" alt="YouTube"></a>
 						<a href="/#/4/6"><img class="resources" data-src="/lib/img/reddit.png" alt="Reddit"></a><br>
-						
+
 					</div>
 				</section>
 				<!-- Slack -->
