--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
 		<title>Qora - P2P Digital Currency</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="A digital currency with powerful and innovative features that leads the next generation.">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -256,7 +255,7 @@ button.cta {
 
 					<section data-transition="slide" data-background="#ffffff" data-background-transition="zoom">
 							<img data-src="/lib/img/qora.png" alt="Qora"><br><br>
-							<a class="rech" href="/#/1/1"><i class="fa fa-play"> Watch the video</i></a>
+							<a class="rech" href="/#/1/1"><i class="fa fa-play"> Learn about Qora</i></a>
 							<a class="rech" href="/#/2"><i class="fa fa-download"> Download the wallet</i></a>
 							<a class="rech" href="/#/3"><i class="fa fa-th-list"> Find resources</i></a>
 							<a class="rech" href="/#/4"><i class="fa fa-users"> Meet the community</i></a>
