--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@ button.cta {
 							<img data-src="/lib/img/qora.png" alt="Qora"><br><br>
 							<a class="rech" href="/#/1/1"><i class="fa fa-play"> Learn about Qora</i></a>
 							<a class="rech" href="/#/2"><i class="fa fa-download"> Download the wallet</i></a>
-							<a class="rech" href="/#/3"><i class="fa fa-th-list"> Find resources</i></a>
-							<a class="rech" href="/#/4"><i class="fa fa-users"> Meet the community</i></a>
+							<!-- <a class="rech" href="/#/3"><i class="fa fa-th-list"> Find resources</i></a> -->
+							<!-- <a class="rech" href="/#/4"><i class="fa fa-users"> Meet the community</i></a> -->
 					</section>
 					<section>
 					<section data-background="https://i.imgur.com/b1BZy3A.jpg">
