--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ button.cta {
 			<div class="slides">
 
 
-					<section data-transition="slide" data-background="#ffffff" data-background-transition="zoom">
+					<section data-background="#ffffff" data-background-transition="zoom">
 							<img data-src="/lib/img/qora.png" alt="Qora"><br><br>
 							<a class="rech" href="/#/1/1"><i class="fa fa-play"> Learn about Qora</i></a>
 							<a class="rech" href="/#/2"><i class="fa fa-download"> Download the wallet</i></a>
