--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ a.rech {
 		font-size: 20px;
 		border: 3px solid;
 		padding: 20px;
+		margin-left: 100px;
+    margin-right: 100px;
 }
 a:focus.rech, a:hover.rech {
     color: #444 !important;
@@ -281,14 +283,14 @@ button.cta {
 					</div>
 				</section>
 				<section data-background="#413dbd">
-					<h2>Universal Wallet</h2>
+					<h4>Universal Wallet</h2>
 					<div class="downloads-expanded">
 					<a href="https://github.com/Qoracoin/Qora/releases/download/0.22.0/Qora_v0.22.0.zip"><img class="downloads-expanded" data-src="/lib/img/java-2.png" alt="Universal"></a>
 					<p>The Universal Wallet</p>
 				</div><a class="downloads" href="/#/2"><i class="fa fa-chevron-left"> Back to downloads</i></a>
 				</section>
 				<section data-background="#413dbd">
-					<h2>Windows Wallet</h2>
+					<h4>Windows Wallet</h2>
 					<div class="downloads-expanded">
 						<a href="https://github.com/Qoracoin/Qora/releases/download/0.22.0/Qora-v0.22.0.exe"><img class="downloads-expanded" data-src="/lib/img/windows-2.png" alt="Windows"></a>
 					</div><a class="downloads" href="/#/2"><i class="fa fa-chevron-left"> Back to downloads</i></a>
@@ -321,6 +323,7 @@ button.cta {
 				</section>
 				<!-- Github -->
 				<section data-background="#ffffff">
+					<h4>Source Code</h2>
 					<div class="community-expanded">
 						<span class="community-expanded-l">
 							<p>Find and explore<br>the <a target="_blank" href="https://github.com/Qoracoin/Qora">source code</a> on</p>
@@ -334,6 +337,7 @@ button.cta {
 				</section>
 				<!-- Block Explorer -->
 				<section data-background="#ffffff">
+					<h4>Block Explorer</h2>
 					<div class="community-expanded">
 						<span class="community-expanded-l">
 							<p>Search on the<br></p>
@@ -348,6 +352,7 @@ button.cta {
 				</section>
 				<!-- API -->
 				<section data-background="#ffffff">
+					<h4>API Documentation</h2>
 					<div class="community-expanded">
 						<span class="community-expanded-l">
 							<p>Read the<br>
@@ -373,6 +378,7 @@ button.cta {
 			</section>
 			<!-- Docs -->
 			<section data-background="#ffffff">
+				<h4>Tutorials</h2>
 				<div class="community-expanded">
 					<span class="community-expanded-l">
 						<br><p>Read the<br><a target="_blank" href="http://docs.qora.org"><button class="cta" type="btn">Tutorials</button></a><br>of Qora</p>
@@ -385,6 +391,7 @@ button.cta {
 			</section>
 			<!-- Faucet -->
 			<section data-background="#ffffff">
+				<h4>Faucet</h2>
 				<div class="community-expanded">
 					<span class="community-expanded-l">
 						<p><br><br>Get free coins<br>from the <br><a target="_blank" href="http://qora.co.in/faucet.php"><button class="cta" type="btn">Faucet</button></a><br></p>
@@ -412,6 +419,7 @@ button.cta {
 				</section>
 				<!-- Slack -->
 					<section data-background="#ffffff">
+						<h4>Slack</h2>
 						<div class="community-expanded">
 							<span class="community-expanded-l">
 								<!-- <img class="community-expanded-slack" data-src="/lib/img/slack-logo.png" alt="Slack"> -->
@@ -427,6 +435,7 @@ button.cta {
 					</section>
 					<!-- Twitter -->
 					<section data-background="#ffffff">
+						<h4>Twitter</h2>
 						<div class="community-expanded">
 							<span class="community-expanded-l">
 								<!-- <img class="community-expanded-slack" data-src="/lib/img/twitter-logo.png" alt="Twitter"> -->
@@ -442,6 +451,7 @@ button.cta {
 					</section>
 					<!-- Facebook -->
 					<section data-background="#ffffff">
+						<h4>Facebook</h2>
 						<div class="community-expanded">
 						<span class="community-expanded-l">
 							<br>
@@ -456,6 +466,7 @@ button.cta {
 					</section>
 			<!-- Medium -->
 			<section data-background="#ffffff">
+				<h4>Medium</h2>
 				<div class="community-expanded">
 					<span class="community-expanded-r">
 						<br>
@@ -472,6 +483,7 @@ button.cta {
 			</section>
 			<!-- YouTube -->
 			<section data-background="#ffffff">
+				<h4>YouTube</h2>
 				<div class="community-expanded">
 					<span class="community-expanded-l">
 						<p>Subscribe<br>on</p>
@@ -485,6 +497,7 @@ button.cta {
 			</section>
 			<!-- Reddit -->
 			<section data-background="#ffffff">
+				<h4>Reddit</h2>
 				<div class="community-expanded">
 					<span class="community-expanded-l">
 
