--- a/index.html
+++ b/index.html
@@ -268,7 +268,10 @@ button.cta {
 					<section data-background-video="/lib/vid/Qora.mp4" data-background-color="#000000" class="stretch">
 
 					</section>
-
+					<section data-background="http://i.imgur.com/c0oMYqA.jpg">
+					</section>
+					<section data-background="http://i.imgur.com/tthKUcN.png">
+					</section>
 
 
 				</section>
